format CSS plans and style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Teste Layout</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="plans.css">
 </head>
 
 <body>
@@ -67,63 +68,65 @@
             </div>
         </main>
         <section class="plans">
-            <h2>growth plans</h2>
-            <p>take your business to the next level</p>
-            <div class="price-plans">
-                <div class="plan1">
-                    <div class="price">
-                        $ 100 <br> 100 + hours
+            <div class="content-plans">
+                <h2>growth plans</h2>
+                <p id="ptop">take your business to the next level</p>
+                <div class="price-plans">
+                    <div class="plan1 plan">
+                        <div class="price">
+                            $ 100 <br> 100 + hours
+                        </div>
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="descripition">
-                        Lorem ipsum dolor sitamet, consecteturadipiscing elit.
-                    </div>
-                </div>
 
-                <div class="plan2">
-                    <div class="price">
-                        $ 150 <br> 180 + hours
+                    <div class="plan2 plan">
+                        <div class="price">
+                            $ 150 <br> 180 + hours
+                        </div>
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="descripition">
-                        Lorem ipsum dolor sitamet, consecteturadipiscing elit.
-                    </div>
-                </div>
 
-                <div class="plan3">
-                    <div class="price">
-                        $ 200 <br> 260 + hours
+                    <div class="plan3 plan">
+                        <div class="price">
+                            $ 200 <br> 260 + hours
+                        </div>
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="descripition">
-                        Lorem ipsum dolor sitamet, consecteturadipiscing elit.
-                    </div>
-                </div>
 
-                <div class="plan4">
-                    <div class="price">
-                        $ 250 <br> 380 + hours
+                    <div class="plan4 plan">
+                        <div class="price">
+                            $ 250 <br> 380 + hours
+                        </div>
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="descripition">
-                        Lorem ipsum dolor sitamet, consecteturadipiscing elit.
-                    </div>
-                </div>
 
-                <div class="plan5">
-                    <div class="price">
-                        $ 300 <br> 420 + hours
+                    <div class="plan5 plan">
+                        <div class="price">
+                            $ 300 <br> 420 + hours
+                        </div>
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="descripition">
-                        Lorem ipsum dolor sitamet, consecteturadipiscing elit.
-                    </div>
-                </div>
 
-                <div class="plan6">
-                    <div class="price">
-                        $ 350 <br> 530 + hours
+                    <div class="plan6 plan">
+                        <div class="price">
+                            $ 350 <br> 530 + hours
+                        </div>
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                     </div>
-                    <div class="descripition">
-                        Lorem ipsum dolor sitamet, consecteturadipiscing elit.
-                    </div>
-                </div>
 
+                </div>
             </div>
         </section>
     </div>
