--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-content">
                 <img src="./img/Frame 2.png" alt="">
                 <h1>we have ideas to <br> growth your business</h1>
-                <a href="#">SEE NOW</a>
+                <a href="#" id="btnsee">SEE NOW</a>
             </div>
         </header>
         <main class="content">
@@ -69,61 +69,68 @@
         </main>
         <section class="plans">
             <div class="content-plans">
-                <h2>growth plans</h2>
-                <p id="ptop">take your business to the next level</p>
+                <div class="title-plans">
+                    <h2>growth plans</h2>
+                    <p id="ptop">take your business to the next level</p>
+                </div>
                 <div class="price-plans">
                     <div class="plan1 plan">
+                        <div class="descripition">
+                            <p> Lorem ipsum<br> dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                         <div class="price">
                             $ 100 <br> 100 + hours
-                        </div>
-                        <div class="descripition">
-                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
                         </div>
                     </div>
 
                     <div class="plan2 plan">
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                         <div class="price">
                             $ 150 <br> 180 + hours
                         </div>
-                        <div class="descripition">
-                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
-                        </div>
+
                     </div>
 
                     <div class="plan3 plan">
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                         <div class="price">
                             $ 200 <br> 260 + hours
                         </div>
-                        <div class="descripition">
-                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
-                        </div>
+
                     </div>
 
                     <div class="plan4 plan">
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                         <div class="price">
                             $ 250 <br> 380 + hours
                         </div>
-                        <div class="descripition">
-                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
-                        </div>
+
                     </div>
 
                     <div class="plan5 plan">
+                        <div class="descripition">
+                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
+                        </div>
                         <div class="price">
                             $ 300 <br> 420 + hours
                         </div>
-                        <div class="descripition">
-                            <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
-                        </div>
+
                     </div>
 
                     <div class="plan6 plan">
-                        <div class="price">
-                            $ 350 <br> 530 + hours
-                        </div>
                         <div class="descripition">
                             <p> Lorem ipsum dolor sitamet, consecteturadipiscing elit.</p>
                         </div>
+                        <div class="price">
+                            $ 350 <br> 530 + hours
+                        </div>
+
                     </div>
 
                 </div>
