update feature in the header

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="header-content">
                 <img src="./img/Frame 2.png" alt="">
                 <h1>we have ideas to <br> growth your business</h1>
-                <a href="#" id="btnsee">SEE NOW</a>
+                <a href="#content" id="btnsee">SEE NOW</a>
             </div>
         </header>
-        <main class="content">
+        <main class="content" id="content">
             <!-- <div class="title"> -->
             <h2>categories</h2>
             <p>discover new possibilities to help you today</p>
